Pfad zum einladen von Spielern hinzugefügt
