# api/swagger/swagger.yaml
@@ -272,12 +272,60 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /lobby/invite:
+    x-swagger-router-controller: lobby
+    put:
+      description: Invites a List of Players into a lobby
+      operationId: invitePlayers
+      parameters:
+        - in: query
+          name: lobbyid
+          type: integer
+          required: true
+          description: Numeric ID of the Lobby.
+        - in: body
+          name: playerList
+          required: true
+          description: Names of Players.
+          schema:
+            $ref: "#/definitions/PlayerNames"
+      responses:
+        "200":
+          description: OK
+          headers:
+            Acces-Control-Allow-Credentials:
+              type: boolean
+              default: true
+            Acces-Control-Allow-Headers:
+              type: string
+              default: Accept, X-Access-Token, X-Application-Name, X-Request-Sent-Time
+            Access-Control-Allow-Methods:
+              type: string
+              default: GET, POST, OPTIONS, PUT, DELETE
+            Access-Control-Allow-Origin:
+              type: string
+              default: "*"
+          schema:
+            $ref: "#/definitions/Response"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"  
   
   
   /swagger:
     x-swagger-pipe: swagger_raw
 
 definitions:
+  PlayerName:
+    properties:
+      username:
+        type: string
+        description: Name of a Player
+  PlayerNames:
+    type: array
+    items:
+      $ref: '#/definitions/PlayerName'
   PlayerId:
     properties:
       id:
